<resources>
    <string name="app_name">TicTacToe</string>
    <string name="menu_play">Play</string>
    <string name="menu_help">Help</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="gameover_title">Game Over!</string>
    <string name="gameover_again">Play Again</string>
    <string name="gameover_back">Back to Menu</string>
    <string name="title">Tic Tac Toe</string>
</resources>
