<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOffWhite">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="@dimen/titleText"
        android:gravity="center"
        android:id="@+id/title"/>

    <LinearLayout
        android:background="@color/colorOffWhite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/menuItemTextButtonSpacing"
            android:background="@color/colorBlack">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/border"
                android:background="@color/colorOffWhite">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_play"
                    android:id="@+id/play_item"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/menuItemTopMargin"
                    android:layout_marginBottom="@dimen/menuItemBottomMargin"
                    android:paddingTop="@dimen/menuItemTopPadding"
                    android:paddingBottom="@dimen/menuItemBottomPadding"
                    android:textSize="@dimen/menuItemTextSize"/>
            </FrameLayout>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/menuItemTextButtonSpacing"
            android:background="@color/colorBlack">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/border"
                android:background="@color/colorOffWhite">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_help"
                    android:id="@+id/help_item"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/menuItemTopMargin"
                    android:layout_marginBottom="@dimen/menuItemBottomMargin"
                    android:paddingTop="@dimen/menuItemTopPadding"
                    android:paddingBottom="@dimen/menuItemBottomPadding"
                    android:textSize="@dimen/menuItemTextSize"/>
            </FrameLayout>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/menuItemTextButtonSpacing"
            android:background="@color/colorBlack">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/border"
                android:background="@color/colorOffWhite">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_settings"
                    android:id="@+id/settings_item"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/menuItemTopMargin"
                    android:layout_marginBottom="@dimen/menuItemBottomMargin"
                    android:paddingTop="@dimen/menuItemTopPadding"
                    android:paddingBottom="@dimen/menuItemBottomPadding"
                    android:textSize="@dimen/menuItemTextSize"/>
            </FrameLayout>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/menuItemTextButtonSpacing"
            android:background="@color/colorBlack">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/border"
                android:background="@color/colorOffWhite">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_about"
                    android:id="@+id/about_item"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/menuItemTopMargin"
                    android:layout_marginBottom="@dimen/menuItemBottomMargin"
                    android:paddingTop="@dimen/menuItemTopPadding"
                    android:paddingBottom="@dimen/menuItemBottomPadding"
                    android:textSize="@dimen/menuItemTextSize"/>
            </FrameLayout>
        </FrameLayout>
    </LinearLayout>
</RelativeLayout>
